@@ -1,17 +1,17 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
- * <p>
+ * Copyright © 2014-2019 Ilkka Seppälä
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * <p>
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * <p>
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -20,21 +20,17 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.abstractdocument;
 
-import com.iluwatar.abstractdocument.domain.Car;
-import com.iluwatar.abstractdocument.domain.HasModel;
-import com.iluwatar.abstractdocument.domain.HasParts;
-import com.iluwatar.abstractdocument.domain.HasPrice;
-import com.iluwatar.abstractdocument.domain.HasType;
-import com.iluwatar.abstractdocument.domain.Part;
-import org.junit.jupiter.api.Test;
-
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
+
+import com.iluwatar.abstractdocument.domain.Car;
+import com.iluwatar.abstractdocument.domain.Part;
+import com.iluwatar.abstractdocument.domain.enums.Property;
+import java.util.List;
+import java.util.Map;
+import org.junit.jupiter.api.Test;
 
 /**
  * Test for Part and Car
@@ -50,27 +46,27 @@ public class DomainTest {
 
   @Test
   public void shouldConstructPart() {
-    Map<String, Object> partProperties = new HashMap<>();
-    partProperties.put(HasType.PROPERTY, TEST_PART_TYPE);
-    partProperties.put(HasModel.PROPERTY, TEST_PART_MODEL);
-    partProperties.put(HasPrice.PROPERTY, TEST_PART_PRICE);
-    Part part = new Part(partProperties);
-
-    assertEquals(TEST_PART_TYPE, part.getType().get());
-    assertEquals(TEST_PART_MODEL, part.getModel().get());
-    assertEquals(TEST_PART_PRICE, part.getPrice().get());
+    var partProperties = Map.of(
+        Property.TYPE.toString(), TEST_PART_TYPE,
+        Property.MODEL.toString(), TEST_PART_MODEL,
+        Property.PRICE.toString(), (Object) TEST_PART_PRICE
+    );
+    var part = new Part(partProperties);
+    assertEquals(TEST_PART_TYPE, part.getType().orElseThrow());
+    assertEquals(TEST_PART_MODEL, part.getModel().orElseThrow());
+    assertEquals(TEST_PART_PRICE, part.getPrice().orElseThrow());
   }
 
   @Test
   public void shouldConstructCar() {
-    Map<String, Object> carProperties = new HashMap<>();
-    carProperties.put(HasModel.PROPERTY, TEST_CAR_MODEL);
-    carProperties.put(HasPrice.PROPERTY, TEST_CAR_PRICE);
-    carProperties.put(HasParts.PROPERTY, Arrays.asList(new HashMap<>(), new HashMap<>()));
-    Car car = new Car(carProperties);
-
-    assertEquals(TEST_CAR_MODEL, car.getModel().get());
-    assertEquals(TEST_CAR_PRICE, car.getPrice().get());
+    var carProperties = Map.of(
+        Property.MODEL.toString(), TEST_CAR_MODEL,
+        Property.PRICE.toString(), TEST_CAR_PRICE,
+        Property.PARTS.toString(), List.of(Map.of(), Map.of())
+    );
+    var car = new Car(carProperties);
+    assertEquals(TEST_CAR_MODEL, car.getModel().orElseThrow());
+    assertEquals(TEST_CAR_PRICE, car.getPrice().orElseThrow());
     assertEquals(2, car.getParts().count());
   }
 
