@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2019 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,7 +20,12 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.hexagonal.domain;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.inject.Guice;
 import com.google.inject.Inject;
@@ -29,22 +34,12 @@ import com.iluwatar.hexagonal.banking.WireTransfers;
 import com.iluwatar.hexagonal.domain.LotteryTicketCheckResult.CheckResult;
 import com.iluwatar.hexagonal.module.LotteryTestingModule;
 import com.iluwatar.hexagonal.test.LotteryTestUtils;
+import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Map;
-import java.util.Optional;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
 /**
- * 
  * Test the lottery system
- *
  */
 class LotteryTest {
 
@@ -66,38 +61,38 @@ class LotteryTest {
     // add funds to the test player's bank account
     wireTransfers.setFunds("123-12312", 100);
   }
-  
+
   @Test
   void testLottery() {
     // admin resets the lottery
     administration.resetLottery();
     assertEquals(0, administration.getAllSubmittedTickets().size());
-    
+
     // players submit the lottery tickets
-    Optional<LotteryTicketId> ticket1 = service.submitTicket(LotteryTestUtils.createLotteryTicket("cvt@bbb.com",
-        "123-12312", "+32425255", new HashSet<>(Arrays.asList(1, 2, 3, 4))));
+    var ticket1 = service.submitTicket(LotteryTestUtils.createLotteryTicket("cvt@bbb.com",
+        "123-12312", "+32425255", Set.of(1, 2, 3, 4)));
     assertTrue(ticket1.isPresent());
-    Optional<LotteryTicketId> ticket2 = service.submitTicket(LotteryTestUtils.createLotteryTicket("ant@bac.com",
-        "123-12312", "+32423455", new HashSet<>(Arrays.asList(11, 12, 13, 14))));
+    var ticket2 = service.submitTicket(LotteryTestUtils.createLotteryTicket("ant@bac.com",
+        "123-12312", "+32423455", Set.of(11, 12, 13, 14)));
     assertTrue(ticket2.isPresent());
-    Optional<LotteryTicketId> ticket3 = service.submitTicket(LotteryTestUtils.createLotteryTicket("arg@boo.com",
-        "123-12312", "+32421255", new HashSet<>(Arrays.asList(6, 8, 13, 19))));
+    var ticket3 = service.submitTicket(LotteryTestUtils.createLotteryTicket("arg@boo.com",
+        "123-12312", "+32421255", Set.of(6, 8, 13, 19)));
     assertTrue(ticket3.isPresent());
     assertEquals(3, administration.getAllSubmittedTickets().size());
-    
+
     // perform lottery
-    LotteryNumbers winningNumbers = administration.performLottery();
+    var winningNumbers = administration.performLottery();
 
     // cheat a bit for testing sake, use winning numbers to submit another ticket
-    Optional<LotteryTicketId> ticket4 = service.submitTicket(LotteryTestUtils.createLotteryTicket("lucky@orb.com",
+    var ticket4 = service.submitTicket(LotteryTestUtils.createLotteryTicket("lucky@orb.com",
         "123-12312", "+12421255", winningNumbers.getNumbers()));
     assertTrue(ticket4.isPresent());
     assertEquals(4, administration.getAllSubmittedTickets().size());
-    
+
     // check winners
-    Map<LotteryTicketId, LotteryTicket> tickets = administration.getAllSubmittedTickets();
-    for (LotteryTicketId id: tickets.keySet()) {
-      LotteryTicketCheckResult checkResult = service.checkTicketForPrize(id, winningNumbers);
+    var tickets = administration.getAllSubmittedTickets();
+    for (var id : tickets.keySet()) {
+      var checkResult = service.checkTicketForPrize(id, winningNumbers);
       assertNotEquals(CheckResult.TICKET_NOT_SUBMITTED, checkResult.getResult());
       if (checkResult.getResult().equals(CheckResult.WIN_PRIZE)) {
         assertTrue(checkResult.getPrizeAmount() > 0);
@@ -105,9 +100,9 @@ class LotteryTest {
         assertEquals(0, checkResult.getPrizeAmount());
       }
     }
-    
+
     // check another ticket that has not been submitted
-    LotteryTicketCheckResult checkResult = service.checkTicketForPrize(new LotteryTicketId(), winningNumbers);
+    var checkResult = service.checkTicketForPrize(new LotteryTicketId(), winningNumbers);
     assertEquals(CheckResult.TICKET_NOT_SUBMITTED, checkResult.getResult());
     assertEquals(0, checkResult.getPrizeAmount());
   }
