@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014 Ilkka Seppälä
+ * Copyright © 2014-2019 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,15 +20,18 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.serverless.baas.api;
+
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBMapper;
 import com.amazonaws.services.lambda.runtime.Context;
 import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyRequestEvent;
-import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyResponseEvent;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.iluwatar.serverless.baas.api.SavePersonApiHandler;
 import com.iluwatar.serverless.baas.model.Address;
 import com.iluwatar.serverless.baas.model.Person;
 import org.junit.Assert;
@@ -38,11 +41,8 @@ import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.runners.MockitoJUnitRunner;
 
-import static org.mockito.Mockito.*;
-
 /**
- * Unit tests for SavePersonApiHandler
- * Created by dheeraj.mummar on 3/4/18.
+ * Unit tests for SavePersonApiHandler Created by dheeraj.mummar on 3/4/18.
  */
 @RunWith(MockitoJUnitRunner.class)
 public class SavePersonApiHandlerTest {
@@ -62,40 +62,40 @@ public class SavePersonApiHandlerTest {
 
   @Test
   public void handleRequestSavePersonSuccessful() throws JsonProcessingException {
-    Person person = newPerson();
-    APIGatewayProxyResponseEvent apiGatewayProxyResponseEvent =
-        this.savePersonApiHandler
-            .handleRequest(apiGatewayProxyRequestEvent(objectMapper.writeValueAsString(person)), mock(Context.class));
+    var person = newPerson();
+    var body = objectMapper.writeValueAsString(person);
+    var request = apiGatewayProxyRequestEvent(body);
+    var ctx = mock(Context.class);
+    var apiGatewayProxyResponseEvent = this.savePersonApiHandler.handleRequest(request, ctx);
     verify(dynamoDbMapper, times(1)).save(person);
     Assert.assertNotNull(apiGatewayProxyResponseEvent);
-    Assert.assertEquals(new Integer(201), apiGatewayProxyResponseEvent.getStatusCode());
+    Assert.assertEquals(Integer.valueOf(201), apiGatewayProxyResponseEvent.getStatusCode());
   }
 
   @Test
   public void handleRequestSavePersonException() {
-    APIGatewayProxyResponseEvent apiGatewayProxyResponseEvent =
-        this.savePersonApiHandler
-            .handleRequest(apiGatewayProxyRequestEvent("invalid sample request"), mock(Context.class));
+    var request = apiGatewayProxyRequestEvent("invalid sample request");
+    var ctx = mock(Context.class);
+    var apiGatewayProxyResponseEvent = this.savePersonApiHandler.handleRequest(request, ctx);
     Assert.assertNotNull(apiGatewayProxyResponseEvent);
-    Assert.assertEquals(new Integer(400), apiGatewayProxyResponseEvent.getStatusCode());
+    Assert.assertEquals(Integer.valueOf(400), apiGatewayProxyResponseEvent.getStatusCode());
   }
 
   private APIGatewayProxyRequestEvent apiGatewayProxyRequestEvent(String body) {
-    APIGatewayProxyRequestEvent apiGatewayProxyRequestEvent = new APIGatewayProxyRequestEvent();
+    var apiGatewayProxyRequestEvent = new APIGatewayProxyRequestEvent();
     return apiGatewayProxyRequestEvent.withBody(body);
   }
 
   private Person newPerson() {
-    Person person = new Person();
+    var person = new Person();
     person.setFirstName("Thor");
     person.setLastName("Odinson");
-    Address address = new Address();
+    var address = new Address();
     address.setAddressLineOne("1 Odin ln");
     address.setCity("Asgard");
     address.setState("country of the Gods");
     address.setZipCode("00001");
     person.setAddress(address);
-
     return person;
   }
 }
