@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2016 Thomas Bauer
+ * Copyright © 2014-2019 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,66 +23,62 @@
 
 package com.iluwatar.tls;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Calendar;
-import java.util.Date;
-import java.util.List;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
-
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Test;
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.fail;
 
+import java.util.ArrayList;
+import java.util.Calendar;
+import java.util.List;
+import java.util.concurrent.Executors;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+
 /**
- * 
  * Test of the Callable
- * 
- * In this test {@link DateFormatCallable} is tested with only one thread (i.e. without concurrency situation)
  * <p>
- * After a successful run 5 date values should be in the result object. All dates should have
- * the same value (15.11.2015). To avoid problems with time zone not the date instances themselves
- * are compared by the test. For the test the dates are converted into string format DD.MM.YYY
+ * In this test {@link DateFormatCallable} is tested with only one thread (i.e. without concurrency
+ * situation)
  * <p>
- * Additionally the number of list entries are tested for both the list with the date values
- * and the list with the exceptions 
- * 
- * @author Thomas Bauer, January 2017
+ * After a successful run 5 date values should be in the result object. All dates should have the
+ * same value (15.11.2015). To avoid problems with time zone not the date instances themselves are
+ * compared by the test. For the test the dates are converted into string format DD.MM.YYY
+ * <p>
+ * Additionally the number of list entries are tested for both the list with the date values and the
+ * list with the exceptions
  *
+ * @author Thomas Bauer, January 2017
  */
 public class DateFormatCallableTest {
 
   // Class variables used in setup() have to be static because setup() has to be static
   /**
-   * Result object given back by DateFormatCallable
-   *   -- Array with converted date values
-   *   -- Array with thrown exceptions
+   * Result object given back by DateFormatCallable -- Array with converted date values -- Array
+   * with thrown exceptions
    */
-  static Result result;
+  private static Result result;
 
   /**
-   * The date values created by the run of of DateFormatRunnalbe. List will be filled in the setup() method
+   * The date values created by the run of of DateFormatRunnalbe. List will be filled in the setup()
+   * method
    */
-  static List<String> createdDateValues = new ArrayList<String>();
+  private static List<String> createdDateValues = new ArrayList<>();
 
   /**
    * Expected number of date values in the date value list created by the run of DateFormatRunnalbe
    */
-  int expectedCounterDateValues = 5;
+  private int expectedCounterDateValues = 5;
 
   /**
-   * Expected number of exceptions in the exception list created by the run of DateFormatRunnalbe. 
+   * Expected number of exceptions in the exception list created by the run of DateFormatRunnalbe.
    */
-  int expectedCounterExceptions = 0;
+  private int expectedCounterExceptions = 0;
 
   /**
-   * Expected content of the list containing the date values created by the run of DateFormatRunnalbe
+   * Expected content of the list containing the date values created by the run of
+   * DateFormatRunnalbe
    */
-  List<String> expectedDateValues = Arrays.asList("15.11.2015", "15.11.2015", "15.11.2015", "15.11.2015", "15.11.2015");
+  private List<String> expectedDateValues =
+      List.of("15.11.2015", "15.11.2015", "15.11.2015", "15.11.2015", "15.11.2015");
 
   /**
    * Run Callable and prepare results for usage in the test methods
@@ -90,10 +86,10 @@ public class DateFormatCallableTest {
   @BeforeAll
   public static void setup() {
     // Create a callable
-    DateFormatCallable callableDf = new DateFormatCallable("dd/MM/yyyy", "15/12/2015");
+    var callableDf = new DateFormatCallable("dd/MM/yyyy", "15/12/2015");
     // start thread using the Callable instance
-    ExecutorService executor = Executors.newCachedThreadPool();
-    Future<Result> futureResult = executor.submit(callableDf);
+    var executor = Executors.newCachedThreadPool();
+    var futureResult = executor.submit(callableDf);
     try {
       result = futureResult.get();
       createdDateValues = convertDatesToString(result);
@@ -108,18 +104,22 @@ public class DateFormatCallableTest {
     if (res == null || res.getDateList() == null || res.getDateList().size() == 0) {
       return null;
     }
-    List<String> returnList = new ArrayList<String>();
+    var returnList = new ArrayList<String>();
 
-    for (Date dt : res.getDateList()) {
-      Calendar cal = Calendar.getInstance();
+    for (var dt : res.getDateList()) {
+      var cal = Calendar.getInstance();
       cal.setTime(dt);
-      returnList.add(cal.get(Calendar.DAY_OF_MONTH) + "." + cal.get(Calendar.MONTH) + "." + cal.get(Calendar.YEAR));
+      returnList.add(cal.get(Calendar.DAY_OF_MONTH) + "."
+          + cal.get(Calendar.MONTH) + "."
+          + cal.get(Calendar.YEAR)
+      );
     }
     return returnList;
   }
 
   /**
-   * Test date values after the run of DateFormatRunnalbe. A correct run should deliver 5 times 15.12.2015
+   * Test date values after the run of DateFormatRunnalbe. A correct run should deliver 5 times
+   * 15.12.2015
    */
   @Test
   public void testDateValues() {
@@ -127,7 +127,8 @@ public class DateFormatCallableTest {
   }
 
   /**
-   * Test number of dates in the list after the run of DateFormatRunnalbe. A correct run should deliver 5 date values
+   * Test number of dates in the list after the run of DateFormatRunnalbe. A correct run should
+   * deliver 5 date values
    */
   @Test
   public void testCounterDateValues() {
@@ -135,8 +136,8 @@ public class DateFormatCallableTest {
   }
 
   /**
-   * Test number of Exceptions in the list after the run of DateFormatRunnalbe. A correct run should deliver 
-   * no exceptions
+   * Test number of Exceptions in the list after the run of DateFormatRunnalbe. A correct run should
+   * deliver no exceptions
    */
   @Test
   public void testCounterExceptions() {
